--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,11 @@
 title: negligible inevitabilities
 email: makfj.gclan@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
+  may sometimes be presented as urgent, serious inevitabilities. the urgency
+  here is the inevitability, swallowed by me and given back something like nectar
+  swallowed by a bee given back as honey. please don't eat my honey if you are
+  not in the mood. remember too that you can simply touch, or look..but please do
+  include yourself in whatever comes next cause i'm pretty sure it's just you+everything. 
   Moving forward as consequence but can't negate that feeling. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
