--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: > # this means to ignore newlines until "baseurl:"
   it gives. either way, please don't eat my honey if you are
   not in the mood. remember too that you can simply touch, or smell, or look..but please do
   include yourself in whatever comes next cause i'm pretty sure it's just you+everything. 
-  Moving forward as consequence but can't negate that feeling. You can edit this
+  You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
