--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,7 @@
 title: negligible inevitabilities
 email: makfj.gclan@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
-  may sometimes be presented as urgent, serious inevitabilities. the urgency
-  here (like the negligibility) is the inevitability, swallowed by me and given back something like nectar
-  swallowed by a bee given back as honey. maybe more like what the bee is thinking as
-  it gives. either way, please don't eat my honey if you are
-  not in the mood. remember too that you can simply touch, or smell, or look..but please do
-  include yourself in whatever comes next cause i'm pretty sure it's just you+everything. 
+  i don't want to speak in an extreme fashion. i want to speak in a normal fashion and be listened to.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
