--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: negligible inevitabilities
 email: makfj.gclan@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
-  i don't want to speak in an extreme fashion. i want to speak in a normal fashion and i want you to listen.
+  questionable pivots
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
